fixed vertical align for home section

--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,19 @@ p {
     background-size: cover;
 }
 #home-content {
-    top: 250px;
-    position: relative;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+
+    /*
+    *  Where the magic happens
+    *  Centering method from CSS Tricks
+    *  http://css-tricks.com/centering-percentage-widthheight-elements/
+    */
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 }
 /* About */
 
